src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/C4A55.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram C4A55 {
  public enum A;
  enum B;
}
